--- a/jogadores-gremio/package.json
+++ b/jogadores-gremio/package.json
@@ -13,7 +13,7 @@
     "@vercel/analytics": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
